--- a/packages/apsara-ui/styles/antd-overrides.less
+++ b/packages/apsara-ui/styles/antd-overrides.less
@@ -1,9 +1,15 @@
 @import 'variable';
 @import 'mixins';
 
+
 .ant-input:focus,
+.ant-input:hover,
+.ant-input-focused,
 .ant-select,
-.ant-select-selection {
+.ant-select-selection,
+.ant-input-affix-wrapper:focus,
+.ant-input-affix-wrapper:hover, 
+.ant-input-affix-wrapper-focused{
   border-color: @blue-6 !important;
   box-shadow: none !important;
 }
